2009-08-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ResourceFinder.cpp: give ultimate priority
	over config settings to the command line in all circumstances
	(thanks David Vernon).

	* src/libYARP_OS/harness/ResourceFinderTest.cpp: regression test
	to make sure command line can override config files for config
	settings.
	
2009-08-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/include/yarp/sig/Image.h: include a warning
	to the Image::wrapIplImage method about the required object 
	lifetime, and how this interacts with ports (thanks Bruno
	Nery).

2009-07-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/opencv/OpenCVGrabber.cpp: use CV_CAP_ANY,
	"any" camera is 0 rather than -1 now (thanks Sebastien Gay).

	* src/libYARP_OS/src/HttpCarrier.cpp: silly bug in http
	interface to ports, "send data" form used wrong IP (thanks
	Stephane Lallee).

	* example/swig/CMakeLists.txt: update module name in csharp,
	to make Windows happy (thanks Stephane Lallee).

2009-07-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: reveal
	inadvertently hidden Searchable::check() methods (thanks
	to Jonas Ruesch for pointing out problem).

2009-07-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Bottle.cpp: remove incorrect return on
	void method (thanks to David Vernon).

2009-07-21  Arjan Gijsberts  <arjan@liralab.it>

	* src/libYARP_math/src/math.cpp
	* src/libYARP_math/include/yarp/math/Math.h
	* src/libYARP_math/harness/MathTest.cpp
	Added 'luinv' function for square matrix inversion using LU decomposition.
	Added 'chinv' function for positive definite matrix inversion using 
	Cholesky decomposition. This function depends on GSL 1.12 and is commented 
	out until this version is installed on most target machines.

2009-07-07 Lorenzo Natale <nat@robotcub.org>
	* src/libYARP_dev/src/include/yarp/dev/ControlBoardInterfaces.h